--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://alexrich700.github.io/COVID-19-Tracker",
+  "homepage": "https://alexrich700.github.io/COVID-19-Tracker/",
   "name": "covid-19-tracker",
   "version": "0.1.0",
   "private": true,
